src/test/deca/context/invalid/provided/PrintBool.deca
// DESCRIPTION : Print d'un Boolean
//RESULTAT: Print argument is not printable (3.31) 
{
    boolean a;
    print(a);
}
